--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,14 @@
 [tox]
 envlist = py36, py37, py38, py39, cov, cov_local
+skip_missing_interpreters = True
+ignore_basepython_conflict = True
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: cov
+    3.9: py39
 
 [testenv]
 deps=
@@ -8,6 +17,7 @@ deps=
 commands=pytest
 
 [testenv:cov]
+basepython=python3.8
 deps=
     pytest
     pytest-cov
