--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "haversine>=2.8.1",
     "xmltodict>=0.13.0",
     "requests>=2.31.0",
-    "dateparser>=1.2.0",
+    "python-dateutil>=2.9.0",
 ]
 
 [project.optional-dependencies]
